crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__class_def-13.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
u := 0
class T(U):
  v = 0
  fn test(self):
    print self.v, u


# Func:
function "test":
  frame_size: 5
  length: 17
  const (length=2):
    0: "v"
    1: "u"
  code:
     0 | create_empty_list 
     1 | store_reg r4
     3 | load_self 
     4 | load_field [0]
     6 | push_to_list r4
     8 | load_global [1]
    10 | push_to_list r4
    12 | print_list r4
    14 | push_none 
    15 | ret 
    16 | suspend 

function "code":
  frame_size: 7
  length: 29
  const (length=5):
    0: "u"
    1: <class desc "T">
    2: "U"
    3: <func "test">
    4: "T"
  code:
     0 | push_small_int value=0
     5 | store_global [0]
     7 | load_global [2]
     9 | store_reg r4
    11 | load_const [3]
    13 | store_reg r5
    15 | push_small_int value=0
    20 | store_reg r6
    22 | create_class [1], r4
    25 | store_global [4]
    27 | ret 
    28 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r5 │                         ●━━━━━━━━━━━━━━━━━━━━━━━●
r6 │                             ●━━━━━━━━━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  12  13  14  15  16  17  18  
