crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__class_def-14.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
fn test():
  u := 0
  class T(U):
    v = 0
    fn test(self):
      print self.v, u


# Func:
function <test>:
  frame_size: 5
  length: 17
  const (length=1):
    0: "v"
  code:
     0 | create_empty_list 
     1 | store_reg r4
     3 | load_self 
     4 | load_field [0]
     6 | push_to_list r4
     8 | load_capture slot=0
    10 | push_to_list r4
    12 | print_list r4
    14 | push_none 
    15 | ret 
    16 | suspend 

function <test>:
  frame_size: 8
  length: 33
  const (length=3):
    0: <class desc T>
    1: "U"
    2: <closure desc test n=1>
  code:
     0 | push_small_int value=0
     5 | store_reg r4
     7 | load_global [1]
     9 | store_reg r5
    11 | create_closure [2]
    13 | capture_reg r4, slot=0
    16 | store_reg r6
    18 | push_small_int value=0
    23 | store_reg r7
    25 | create_class [0], r5
    28 | store_reg r4
    30 | push_none 
    31 | ret 
    32 | suspend 

function <[[main]]>:
  frame_size: 4
  length: 6
  const (length=2):
    0: <func test>
    1: "test"
  code:
    0 | load_const [0]
    2 | store_global [1]
    4 | ret 
    5 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━●
r3 │             ●━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  
