crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__class_def-2.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
class T:
  v


# Func:
function "code":
  frame_size: 5
  length: 10
  const (length=2):
    0: <class desc "T">
    1: "T"
  code:
     0 | push_none 
     1 | store_reg r4
     3 | create_class [0], r4
     6 | store_global [1]
     8 | ret 
     9 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  12  
