crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__class_def-3.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
class T:
  v = 0


# Func:
function <[[main]]>:
  frame_size: 5
  length: 14
  const (length=2):
    0: <class desc T>
    1: "T"
  code:
     0 | push_small_int value=0
     5 | store_reg r4
     7 | create_class [0], r4
    10 | store_global [1]
    12 | ret 
    13 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  12  
