crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__class_def-6.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
u := 0
class T:
  v = 0
  fn test(self):
    print self.v, u


# Func:
function <test>:
  frame_size: 5
  length: 17
  const (length=2):
    0: "v"
    1: "u"
  code:
     0 | create_empty_list 
     1 | store_reg r4
     3 | load_self 
     4 | load_named [0]
     6 | push_to_list r4
     8 | load_global [1]
    10 | push_to_list r4
    12 | print_list r4
    14 | push_none 
    15 | ret 
    16 | suspend 

function <[[main]]>:
  frame_size: 6
  length: 25
  const (length=4):
    0: "u"
    1: <class desc T>
    2: <func test>
    3: "T"
  code:
     0 | push_small_int value=0
     5 | store_global [0]
     7 | load_const [2]
     9 | store_reg r4
    11 | push_small_int value=0
    16 | store_reg r5
    18 | create_class [1], r4
    21 | store_global [3]
    23 | ret 
    24 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━━━━━━━━━━━━━━━━━●
r5 │                     ●━━━━━━━━━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  12  13  14  15  
