crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__class_def.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
class T: pass


# Func:
function <[[main]]>:
  frame_size: 4
  length: 6
  const (length=2):
    0: <class desc T>
    1: "T"
  code:
    0 | create_class_empty [0]
    2 | store_global [1]
    4 | ret 
    5 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━●
r3 │             ●━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  
